--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,14 +4,24 @@
 
 html,
 body {
+  background-image: radial-gradient(circle, rgb(85, 193, 255), rgb(0, 166, 255), rgb(0, 81, 255));
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Montserrat Extra-bold 800;
 }
 
 a {
-  color: inherit;
+  color: white;
+  text-decoration: none;
+}
+
+h1 {
+  color: white;
+  text-decoration: none;
+}
+
+p {
+  color: white;
   text-decoration: none;
 }
 
